Fix: logo image not showing

--- a/src/styles/_elements-logo--priority.scss
+++ b/src/styles/_elements-logo--priority.scss
@@ -621,7 +621,7 @@ section {
 		}
 
 		.preview {
-			background: url("../../images/aquent/aquent-white.png") no-repeat center center;
+			background: url("../images/aquent/aquent-white.png") no-repeat center center;
 			background-size: contain;
 		}
 		&:hover {
